Seriously, stop showing an overflow

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,6 @@
 ﻿body { }
 
+pre > code,
 body div.slides > section > section.present > pre > code {
     overflow: hidden !important;
 }
